8219151: Illegal instruction exception on JDK 12 due to incorrect CPU feature bits

Fix wrong CPU feature bits set

Reviewed-by: kvn, neliasso